[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"
description = "Find wallpaper by keyword and sets it"
repository = "https://github.com/VrMolodyakov/wallpaper/"
keywords = ["wallpaper"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10.1"