[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"
description = "Find wallpaper by keyword and sets it"
keywords = ["wallpaper"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.10.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = {version = "1.20.0"}
rand = "0.8.3"